Update Loan Data Analysis and Payoff Prediction.ipynb

--- a/Loan Data Analysis and Payoff Prediction.ipynb
+++ b/Loan Data Analysis and Payoff Prediction.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "# Import Libraries\n",
     "\n",
-    "**Importing the usual libraries for pandas and plotting. You can import sklearn later on.**"
+    "**Importing the usual libraries for pandas and plotting.**"
    ]
   },
   {
